2019-05-02 Pierre Choffet <peuc@wanadoo.fr>
	* r4319.fbaa134b-1 :
	Update build after upstream changes

2018-08-31 Pierre Choffet <peuc@wanadoo.fr>
	* r3949.2d1e2c02-1 :
	Add siedler2-data package as optional dependency

2018-08-22 Pierre Choffet <peuc@wanadoo.fr>
	* r3946.826300c2-1 :
	Add missing dependencies
	Update build after upstream changes
	Force build system to use system LUA library instead of the provided one

2018-02-16 Pierre Choffet <peuc@wanadoo.fr>
	* r3863.e340f253-3 :
	Add missing depends and makedepends

2018-02-15 Pierre Choffet <peuc@wanadoo.fr>
	* r3863.e340f253-2 :
	Rename package to "return-to-the-roots-git" since it's not meant to build a
	statically given commit.

	* r3863.e340f253-1 :
	Remove i686 arch
	Explicitly declare all submodules

2018-02-02 Pierre Choffet <peuc@wanadoo.fr>
	* r3846.7ba2df70-1 :
	Update versioning scheme
	Workaround upstream bug in install process

2017-05-11 Pierre Choffet <peuc@wanadoo.fr>
	* 0.8.1.r3017.bf9fcc60-5 :
	Add missing runtime dependency

2017-03-12 Pierre Choffet <peuc@wanadoo.fr>
	* 0.8.1.r3017.bf9fcc60-4 :
	Fix copy of rttr.sh launch script

2017-03-10 Pierre Choffet <peuc@wanadoo.fr>
	* 0.8.1.r3017.bf9fcc60-3 :
	Fix package install on x86_64 systems

	* 0.8.1.r3017.bf9fcc60-2 :
	Fix return-to-the-roots.install sha256sums value
	Add missing build dependencies
	Add missing run dependencies

	* 0.8.1.r3017.bf9fcc60-1 :
	Initial PKGBUILD