@@ -1,8 +1,6 @@
-# Generated by mksrcinfo v8
-# Thu May  2 20:57:19 UTC 2019
 pkgbase = return-to-the-roots-git
 	pkgdesc = Free/libre implementation of The Settlers II game engine
-	pkgver = r4319.fbaa134b
+	pkgver = r4467.3af7f7c76
 	pkgrel = 1
 	url = https://siedler25.org/
 	install = return-to-the-roots.install
@@ -17,11 +15,13 @@ pkgbase = return-to-the-roots-git
 	makedepends = curl
 	makedepends = lua52
 	makedepends = miniupnpc
+	makedepends = libsamplerate
 	depends = boost-libs
 	depends = libgl
 	depends = sdl_mixer
 	depends = miniupnpc
 	depends = lua52
+	depends = libsamplerate
 	optdepends = siedler2-data
 	provides = return-to-the-roots
 	conflicts = return-to-the-roots
